--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,16 @@
+<header>
+  <div class="container-title">
+    <h1>Trinityfs</h1>
+  </div>
+  <nav>
+    <ul>
+      <li>
+        <a routerLink="/">Inicio</a>
+      </li>
+      <li>
+        <a routerLink="/form">Form</a>
+      </li>
+    </ul>
+  </nav>
+</header>
 <router-outlet></router-outlet>
