--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -4,7 +4,7 @@
     <input id="name" name="name" [(ngModel)]="data.name">
   </div>
   <div class="form-control">
-    <label for="status">status:</label>
+    <label for="gender">gender:</label>
     <select id="gender" name="gender" [(ngModel)]="data.gender">
       <option *ngFor="let op of gendersOptions">{{op}}</option>
       </select>
