--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -2,17 +2,8 @@
   <div *ngIf="cards.length === 0">
     <p>not content</p>
   </div>
-  <article class="card" *ngFor="let card of cards">
-    <div class="header">
-      <img [src]="card.image" [alt]="card.name + card.id">
-    </div>
-    <div class="body">
-      <h2>{{card.name}}</h2>
-      <div class="status">
-        <span class="round"
-          [ngClass]="{green: card.status === 'Alive', red: card.status === 'Dead', orange: card.status === 'unknown'}"></span>
-        <p>{{card.status}} - {{card.species}}</p>
-      </div>
-    </div>
-  </article>
+  <app-card
+    *ngFor="let card of cards"
+    [card]="card"
+    (onClick)="handleClick($event)"></app-card>
 </section>
